feat: timezone de la app cambiado a Argentina, card del evento para organizadores

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -149,6 +149,20 @@
     h2.card {
         @apply text-3xl mb-2;
     }
+}
 
-
+@layer utilities {
+    .line-clamp-2 {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+    }
+    
+    .line-clamp-3 {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+    }
 }
