--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -69,21 +69,17 @@
 
 :root {
     /* Primary Colors */
-    /*--primary: #3b82f6;*/
-    --primary: #09093b;
-
+    --primary: #08083a;
     --primary-foreground: #ffffff;
-    --primary-hover: #141484;
+    --primary-hover: #0a0a4d;
     
     /* Secondary Colors */
-    /*--secondary: #f3f4f6;*/
-    --secondary: #24c6be;
-
-    --secondary-foreground: #4b5563;
+    --secondary: #0dc1ba;
+    --secondary-foreground: #ffffff;
     
     /* Accent Colors */
-    --accent: #e0f2fe;
-    --accent-foreground: #1e3a8a;
+    --accent: #e8f0fe;
+    --accent-foreground: #08083a;
     
     /* Base Colors */
     --background: #ffffff;
@@ -108,24 +104,24 @@
     /* Border & Input Colors */
     --border: #e5e7eb;
     --input: #e5e7eb;
-    --ring: #3b82f6;
+    --ring: #08083a;
     
     /* Chart Colors */
-    --chart-1: #3b82f6;
-    --chart-2: #2563eb;
-    --chart-3: #1d4ed8;
-    --chart-4: #1e40af;
-    --chart-5: #1e3a8a;
+    --chart-1: #08083a;
+    --chart-2: #0a0a4d;
+    --chart-3: #0dc1ba;
+    --chart-4: #0e0e73;
+    --chart-5: #101086;
     
     /* Sidebar Colors */
     --sidebar: #f9fafb;
     --sidebar-foreground: #333333;
-    --sidebar-primary: #3b82f6;
+    --sidebar-primary: #08083a;
     --sidebar-primary-foreground: #ffffff;
-    --sidebar-accent: #e0f2fe;
-    --sidebar-accent-foreground: #1e3a8a;
+    --sidebar-accent: #e8f0fe;
+    --sidebar-accent-foreground: #08083a;
     --sidebar-border: #e5e7eb;
-    --sidebar-ring: #3b82f6;
+    --sidebar-ring: #08083a;
     
     --radius: 0.625rem;
 }
