otra prueba para test

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -177,4 +177,8 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 3;
     }
+
+    .text-security-disc {
+        -webkit-text-security: disc;
+    }
 }
